fix broken UI on chrome

--- a/aseekerfrontend/src/components/css/bodyContent.css
+++ b/aseekerfrontend/src/components/css/bodyContent.css
@@ -4,7 +4,6 @@
     position: absolute;
     height: 100%;
     width: 75%;
-    all: revert;
 }
 
 .quickStart {
